// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Popup 1`] = `
<div
  className="popup is-left-top foo"
  style={
    Object {
      "left": -5,
    }
  }
>
  <PopupArrow
    style={
      Object {
        "top": -5,
      }
    }
  />
</div>
`;

exports[`should render PopupArrow 1`] = `
<div
  className="popup-arrow"
  style={
    Object {
      "left": -5,
    }
  }
/>
`;
